--- a/app/src/main/res/layout/activity_ship_detail.xml
+++ b/app/src/main/res/layout/activity_ship_detail.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
     android:orientation="vertical"
     tools:context=".ShipDetailActivity">
 
@@ -11,6 +12,7 @@
         android:id="@+id/textViewNameDetail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:textColor="@color/t1"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -20,17 +22,27 @@
         android:id="@+id/textViewModelDetail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         tools:text="Model" />
 
     <TextView
         android:id="@+id/textViewManufacturerDetail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         tools:text="Manufacturer" />
 
     <TextView
         android:id="@+id/textViewCostDetail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         tools:text="Cost" />
+
+    <Button
+        android:id="@+id/buttonBackToList"
+        android:layout_width="143dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Back" />
 </LinearLayout>
